<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/dashBoardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/callus"
        android:icon="@drawable/ic_call"
        android:title="@string/callus" />
    <item
        android:id="@+id/invite"
        android:icon="@drawable/ic_share"
        android:title="@string/invite" />
    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_bookmark_border"
        android:title="@string/bookmark" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/about" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_power_settings_new"
        android:title="@string/logout" />
</menu>